--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping Cart</title>
-    <link rel="stylesheet" href="/src/css/style.css">
-    <link rel="stylesheet" href="/src/css/normalize.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -51,7 +51,7 @@
                             </div>
                             <div class="product-body">
                                 <div class="product-image">
-                                    <img src="/src/img/r9_5950x.png" alt="Procesador AMD R9 5950X" id="item-image">
+                                    <img src="/img/r9_5950x.png" alt="Procesador AMD R9 5950X" id="item-image">
                                 </div>
                                 <div class="product-info">
                                     <div class="product-price">
@@ -71,7 +71,7 @@
                             </div>
                             <div class="product-body">
                                 <div class="product-image">
-                                    <img src="/src/img/rtx3080.png" alt="ASUS RTX3080 graphics card" id="item-image">
+                                    <img src="/img/rtx3080.png" alt="ASUS RTX3080 graphics card" id="item-image">
                                 </div>
                                 <div class="product-info">
                                     <div class="product-price">
@@ -91,7 +91,7 @@
                             </div>
                             <div class="product-body">
                                 <div class="product-image">
-                                    <img src="/src/img/h525.png" alt="ASUS ROG CROSSHAIR VIII EXTREME Motherboard" id="item-image">
+                                    <img src="/img/h525.png" alt="ASUS ROG CROSSHAIR VIII EXTREME Motherboard" id="item-image">
                                 </div>
                                 <div class="product-info">
                                     <div class="product-price">
@@ -111,7 +111,7 @@
                             </div>
                             <div class="product-body">
                                 <div class="product-image">
-                                    <img src="/src/img/helios.png" alt="ASUS ROG Strix Helios Case" id="item-image">
+                                    <img src="/img/helios.png" alt="ASUS ROG Strix Helios Case" id="item-image">
                                 </div>
                                 <div class="product-info">
                                     <div class="product-price">
@@ -264,7 +264,7 @@
             </div>
         </div>   
     </footer>
-    <script type="module" src="/src/js/app.js"></script>
+    <script type="module" src="/js/app.js"></script>
 </body>
 
 </html>
