--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                         <p>USD<span id="item-price"> 1.345,00</span> iva inc.</p>
                                     </div>
                                     <div class="btn-container">
-                                        <div class="btn p-btn add-item">
+                                        <div class="btn p-btn add-item addToCart">
                                             <p>Agregar </p><span class="material-icons">add_shopping_cart</span>
                                         </div>
                                     </div>
@@ -78,7 +78,7 @@
                                         <p>USD<span id="item-price"> 3.287,00</span> iva inc.</p>
                                     </div>
                                     <div class="btn-container">
-                                        <div class="btn p-btn add-item">
+                                        <div class="btn p-btn add-item addToCart">
                                             <p>Agregar </p><span class="material-icons">add_shopping_cart</span>
                                         </div>
                                     </div>
@@ -98,7 +98,7 @@
                                         <p>USD<span id="item-price"> 806.77</span> iva inc.</p>
                                     </div>
                                     <div class="btn-container">
-                                        <div class="btn p-btn add-item">
+                                        <div class="btn p-btn add-item addToCart">
                                             <p>Agregar </p><span class="material-icons">add_shopping_cart</span>
                                         </div>
                                     </div>
